# HistoricalFractals

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
JuliaSets/: CMakeLists.txt  JuliaSet.c
LyapunovSpace/: CMakeLists.txt  LYAP09.SUC  LyapunovSpace.c
MandelbrotSets/: CMakeLists.txt  MandelbrotSet.c
SectSets/: CMakeLists.txt  SectSet.c
